--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,4 +2,6 @@
 # Please adjust to your needs (see https://www.gitpod.io/docs/config-gitpod-file)
 # and commit this file to your remote git repository to share the goodness with others.
 
-
+vscode:
+  extensions:
+    - ms-vscode.makefile-tools
